tests/rosetta/out/C/abstract-type.error
cc: exit status 1
/tmp/abstract-type.c: In function ‘beastKind’:
/tmp/abstract-type.c:35:10: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   35 |     tmp2 = k;
      |          ^
/tmp/abstract-type.c:38:11: error: redefinition of ‘k’
   38 |     char *k = tmp1.value.cat_t.kind;
      |           ^
/tmp/abstract-type.c:33:11: note: previous definition of ‘k’ with type ‘char *’
   33 |     char *k = tmp1.value.dog_t.kind;
      |           ^
/tmp/abstract-type.c:39:11: error: redefinition of ‘_’
   39 |     char *_ = tmp1.value.cat_t.name;
      |           ^
/tmp/abstract-type.c:34:11: note: previous definition of ‘_’ with type ‘char *’
   34 |     char *_ = tmp1.value.dog_t.name;
      |           ^
/tmp/abstract-type.c:40:10: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   40 |     tmp2 = k;
      |          ^
/tmp/abstract-type.c:46:10: warning: returning ‘int’ from a function with return type ‘char *’ makes pointer from integer without a cast [-Wint-conversion]
   46 |   return tmp2;
      |          ^~~~
/tmp/abstract-type.c: In function ‘beastName’:
/tmp/abstract-type.c:56:10: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   56 |     tmp4 = n;
      |          ^
/tmp/abstract-type.c:59:11: error: redefinition of ‘_’
   59 |     char *_ = tmp3.value.cat_t.kind;
      |           ^
/tmp/abstract-type.c:54:11: note: previous definition of ‘_’ with type ‘char *’
   54 |     char *_ = tmp3.value.dog_t.kind;
      |           ^
/tmp/abstract-type.c:60:11: error: redefinition of ‘n’
   60 |     char *n = tmp3.value.cat_t.name;
      |           ^
/tmp/abstract-type.c:55:11: note: previous definition of ‘n’ with type ‘char *’
   55 |     char *n = tmp3.value.dog_t.name;
      |           ^
/tmp/abstract-type.c:61:10: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |     tmp4 = n;
      |          ^
/tmp/abstract-type.c:67:10: warning: returning ‘int’ from a function with return type ‘char *’ makes pointer from integer without a cast [-Wint-conversion]
   67 |   return tmp4;
      |          ^~~~
/tmp/abstract-type.c: In function ‘beastCry’:
/tmp/abstract-type.c:76:11: error: redefinition of ‘_’
   76 |     char *_ = tmp5.value.dog_t.name;
      |           ^
/tmp/abstract-type.c:75:11: note: previous definition of ‘_’ with type ‘char *’
   75 |     char *_ = tmp5.value.dog_t.kind;
      |           ^
/tmp/abstract-type.c:80:11: error: redefinition of ‘_’
   80 |     char *_ = tmp5.value.cat_t.kind;
      |           ^
/tmp/abstract-type.c:76:11: note: previous definition of ‘_’ with type ‘char *’
   76 |     char *_ = tmp5.value.dog_t.name;
      |           ^
/tmp/abstract-type.c:81:11: error: redefinition of ‘_’
   81 |     char *_ = tmp5.value.cat_t.name;
      |           ^
/tmp/abstract-type.c:80:11: note: previous definition of ‘_’ with type ‘char *’
   80 |     char *_ = tmp5.value.cat_t.kind;
      |           ^
/tmp/abstract-type.c: In function ‘bprint’:
/tmp/abstract-type.c:92:31: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   92 |   printf("%s\n", beastName(b) + ", who's a " + beastKind(b) + ", cries: \"" +
      |                  ~~~~~~~~~~~~ ^
      |                  |            |
      |                  char *       char *
